# slisp

./: .gitignore  BUGS  Changelog  Makefile.in  NOTES  README  acconfig.h  config.h.in  configure  configure.in  version.h
doc/: Makefile.in  slisp.info  slisp.tm  slisp.tm~
lib/: Makefile.in  err.c  lisp.c  lisp.h  xcalloc.c  xmalloc.c  xrealloc.c
lisp/: hanoi.lsp  lisp.lsp  simpson.lisp
src/: Makefile.in  extern.h  funcs.c  funcs.h  helpers.c  lexer.c  main.c  object.c  parser.c  slisp.1  slisp.h
utils/: count_funcs.pl  make-array.c
